add disease granuality

--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -200,6 +200,260 @@
    
    </div> <!--  end of tab-content div -->
 
+<h3>Top diseases granularity</h3>
+<table class="table table-striped table-bordered" id='top_diseases_granularity'>
+<thead><tr><th title="Field #1">Drug</th>
+<th title="Field #2">Dose</th>
+<th title="Field #3">Cell line</th>
+<th title="Field #4">Condition</th>
+<th title="Field #5">Score</th>
+</tr></thead>
+<tbody><tr>
+<td align="right">29</td>
+<td align="right">80</td>
+<td>A549</td>
+<td>Head and neck cancer</td>
+<td align="right">3.36</td>
+</tr>
+<tr>
+<td align="right">10</td>
+<td align="right">1000</td>
+<td>A549</td>
+<td>Rhabdomyosarcoma</td>
+<td align="right">3.35</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">100</td>
+<td>ALLCL</td>
+<td>Asthma</td>
+<td align="right">3.3</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">100</td>
+<td>ALLCL</td>
+<td>Astrocytoma</td>
+<td align="right">3.19</td>
+</tr>
+<tr>
+<td align="right">12</td>
+<td align="right">100</td>
+<td>ALLCL</td>
+<td>Swine influenza</td>
+<td align="right">3.18</td>
+</tr>
+<tr>
+<td align="right">12</td>
+<td align="right">1000</td>
+<td>MCF7</td>
+<td>Sarcoma</td>
+<td align="right">3.14</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">360</td>
+<td>A549</td>
+<td>Serous cystadenocarcinoma</td>
+<td align="right">3.13</td>
+</tr>
+<tr>
+<td align="right">10</td>
+<td align="right">100</td>
+<td>ALLCL</td>
+<td>Sarcoidosis</td>
+<td align="right">3.09</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">360</td>
+<td>MCF7</td>
+<td>Pancreatic non-invasive intraductal papillary-mucinous carcinoma</td>
+<td align="right">3.09</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">80</td>
+<td>A549</td>
+<td>Cholangiocarcinoma</td>
+<td align="right">3.07</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">360</td>
+<td>A549</td>
+<td>Pancreatic non-invasive intraductal papillary-mucinous carcinoma</td>
+<td align="right">3.06</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">360</td>
+<td>A549</td>
+<td>Cholangiocarcinoma</td>
+<td align="right">3.03</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">360</td>
+<td>A549</td>
+<td>Head and neck cancer</td>
+<td align="right">3.01</td>
+</tr>
+<tr>
+<td align="right">10</td>
+<td align="right">1000</td>
+<td>MCF7</td>
+<td>Aortic valve stenosis</td>
+<td align="right">2.98</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">1000</td>
+<td>MCF7</td>
+<td>Sjogren&#39;s syndrome</td>
+<td align="right">2.95</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">360</td>
+<td>A549</td>
+<td>Ulcerative colitis</td>
+<td align="right">2.94</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">1000</td>
+<td>A549</td>
+<td>Swine influenza</td>
+<td align="right">2.87</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">1000</td>
+<td>MCF7</td>
+<td>Ductal carcinoma in situ</td>
+<td align="right">2.83</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">100</td>
+<td>A549</td>
+<td>Swine influenza</td>
+<td align="right">2.82</td>
+</tr>
+<tr>
+<td align="right">10</td>
+<td align="right">100</td>
+<td>A549</td>
+<td>Pediatric osteosarcoma</td>
+<td align="right">2.79</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">1000</td>
+<td>A549</td>
+<td>Hypoplastic left heart syndrome</td>
+<td align="right">2.78</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">100</td>
+<td>ALLCL</td>
+<td>Multiple sclerosis</td>
+<td align="right">2.76</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">100</td>
+<td>A549</td>
+<td>Cerebral palsy</td>
+<td align="right">2.75</td>
+</tr>
+<tr>
+<td align="right">10</td>
+<td align="right">100</td>
+<td>ALLCL</td>
+<td>Nonspecific interstitial pneumonia</td>
+<td align="right">2.74</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">80</td>
+<td>A549</td>
+<td>Ulcerative colitis</td>
+<td align="right">2.72</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">1000</td>
+<td>A549</td>
+<td>Intrahepatic cholangiocarcinoma</td>
+<td align="right">2.72</td>
+</tr>
+<tr>
+<td align="right">10</td>
+<td align="right">1000</td>
+<td>ALLCL</td>
+<td>Spinal cord disease</td>
+<td align="right">2.71</td>
+</tr>
+<tr>
+<td align="right">12</td>
+<td align="right">1000</td>
+<td>ALLCL</td>
+<td>Sjogren&#39;s syndrome</td>
+<td align="right">2.7</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">80</td>
+<td>ALLCL</td>
+<td>Glioblastoma multiforme</td>
+<td align="right">2.67</td>
+</tr>
+<tr>
+<td align="right">10</td>
+<td align="right">100</td>
+<td>ALLCL</td>
+<td>Gwine influenza</td>
+<td align="right">2.66</td>
+</tr>
+<tr>
+<td align="right">15</td>
+<td align="right">100</td>
+<td>ALLCL</td>
+<td>Barrett&#39;s esophagus</td>
+<td align="right">2.66</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">360</td>
+<td>MCF7</td>
+<td>Serous cystadenocarcinoma</td>
+<td align="right">2.65</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">80</td>
+<td>A549</td>
+<td>Sjogren&#39;s syndrome/Sicca syndrome</td>
+<td align="right">2.63</td>
+</tr>
+<tr>
+<td align="right">12</td>
+<td align="right">1000</td>
+<td>ALLCL</td>
+<td>Hypoplastic left heart syndrome</td>
+<td align="right">2.6</td>
+</tr>
+<tr>
+<td align="right">29</td>
+<td align="right">360</td>
+<td>A549</td>
+<td>Sjogren&#39;s syndrome/Sicca syndrome</td>
+<td align="right">2.56</td>
+</tr>
+</tbody></table>
 
 <h3>Side Effects</h3>
 <hr/>
@@ -941,7 +1195,7 @@ $(function() {
 		{%for group in report.genegroup_set.all%}
 		  {%if forloop.counter = 1%}
 		
-		     drawVolcanoPlot('{{group.get_slug}}_volcano',  '{{group.doc_logfc}}');
+		     drawVolcanoPlot('{{group.get_slug}}_volcano', {{report.id}}, '{{group.doc_logfc}}');
 	         drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{group.get_slug}}'); 
 	     
 	       {%endif%}
@@ -979,7 +1233,7 @@ $(function() {
 	  $('#vol_boot_{{group.get_slug}}').click(function(){
 			
 			if($("#{{group.get_slug}}_volcano span").html() == 'Loading plot...'){
-				drawVolcanoPlot('{{group.get_slug}}_volcano',  '{{group.doc_logfc}}');
+				drawVolcanoPlot('{{group.get_slug}}_volcano', {{report.id}}, '{{group.doc_logfc}}');
 			}
 			if ( !$.fn.dataTable.isDataTable( '#tbl-{{group.get_slug}}' ) ) {
 				 drawGeneTable({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{group.get_slug}}'); 
@@ -997,7 +1251,8 @@ $(function() {
 			          renderTo='{{group.get_slug}}_volcano',
 			          xname='log2({{group.name}} Expression level)',
 			          yname='log2({{report.norm_name}} Expression level)',
-			          file_name='{{group.document}}');
+			          file_name='{{group.document}}',
+			          reportID={{report.id}});
 	  drawGeneTableScatter({{report.id}}, 'tbl-{{group.get_slug}}', '{{group.doc_logfc}}', categories='{{report.get_all_gene_groups_norm_as_list}}'); 
 	{%endfor%}
 	{%endif%}
@@ -1134,6 +1389,10 @@ $('#dlfc_boot_overall29').click(function(){
       
 {%endfor%}
 
+
+$(document).ready(function() {
+    $('#top_diseases_granularity').DataTable();
+} );
 
 
 ///////////// Side Effects
