add disease granuality 4

--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -1391,7 +1391,9 @@ $('#dlfc_boot_overall29').click(function(){
 
 
 $(document).ready(function() {
-    $('#top_diseases_granularity').DataTable();
+    $('#top_diseases_granularity').DataTable({
+    	"order": [[ 4, "desc" ]]
+    });
 } );
 
 
