add disease granuality 5

--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -225,21 +225,21 @@
 <tr>
 <td align="right">15</td>
 <td align="right">100</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Asthma</td>
 <td align="right">3.3</td>
 </tr>
 <tr>
 <td align="right">15</td>
 <td align="right">100</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Astrocytoma</td>
 <td align="right">3.19</td>
 </tr>
 <tr>
 <td align="right">12</td>
 <td align="right">100</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Swine influenza</td>
 <td align="right">3.18</td>
 </tr>
@@ -260,7 +260,7 @@
 <tr>
 <td align="right">10</td>
 <td align="right">100</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Sarcoidosis</td>
 <td align="right">3.09</td>
 </tr>
@@ -331,7 +331,7 @@
 <td align="right">15</td>
 <td align="right">1000</td>
 <td>MCF7</td>
-<td>Ductal carcinoma in situ</td>
+<td>Ductal carcinoma</td>
 <td align="right">2.83</td>
 </tr>
 <tr>
@@ -358,7 +358,7 @@
 <tr>
 <td align="right">15</td>
 <td align="right">100</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Multiple sclerosis</td>
 <td align="right">2.76</td>
 </tr>
@@ -372,7 +372,7 @@
 <tr>
 <td align="right">10</td>
 <td align="right">100</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Nonspecific interstitial pneumonia</td>
 <td align="right">2.74</td>
 </tr>
@@ -393,35 +393,35 @@
 <tr>
 <td align="right">10</td>
 <td align="right">1000</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Spinal cord disease</td>
 <td align="right">2.71</td>
 </tr>
 <tr>
 <td align="right">12</td>
 <td align="right">1000</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Sjogren&#39;s syndrome</td>
 <td align="right">2.7</td>
 </tr>
 <tr>
 <td align="right">29</td>
 <td align="right">80</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Glioblastoma multiforme</td>
 <td align="right">2.67</td>
 </tr>
 <tr>
 <td align="right">10</td>
 <td align="right">100</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Gwine influenza</td>
 <td align="right">2.66</td>
 </tr>
 <tr>
 <td align="right">15</td>
 <td align="right">100</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Barrett&#39;s esophagus</td>
 <td align="right">2.66</td>
 </tr>
@@ -442,7 +442,7 @@
 <tr>
 <td align="right">12</td>
 <td align="right">1000</td>
-<td>ALLCL</td>
+<td>Combined</td>
 <td>Hypoplastic left heart syndrome</td>
 <td align="right">2.6</td>
 </tr>
@@ -454,7 +454,6 @@
 <td align="right">2.56</td>
 </tr>
 </tbody></table>
-
 <h3>Side Effects</h3>
 <hr/>
    <!-- DL Nav tabs -->      
