--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -409,7 +409,7 @@
 <td align="right">10</td>
 <td align="right">100</td>
 <td>Combined</td>
-<td>Gwine influenza</td>
+<td>Swine influenza</td>
 <td align="right">2.66</td>
 </tr>
 <tr>
