add disease granuality 8

--- a/oncoFinder2/templates/report/report_detail_az.html
+++ b/oncoFinder2/templates/report/report_detail_az.html
@@ -200,7 +200,7 @@
    
    </div> <!--  end of tab-content div -->
 
-<h3>Top diseases granularity</h3>
+<h3>Top diseases</h3>
 <table class="table table-striped table-bordered" id='top_diseases_granularity'>
 
 <thead><tr><th title="Field #1">Drug</th>
