Made hover: color in navbar consistent with the main theme

--- a/oncoFinder2/static/css/style.css
+++ b/oncoFinder2/static/css/style.css
@@ -95,9 +95,8 @@
 	height: 20px;
 }
 .pr_header_menu span:hover{
-	color: #428bca;
+	color: #396294;
 	cursor: pointer;
-	
 }
 #current_user_link {
 	color: #000;
