--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-US">
+<html lang="en-US" class="of-html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +28,7 @@
     <script src="/static/components/bootstrapx-clickover-bs3/js/bootstrapx-clickover.js"></script>
 </head>
 
-<body>
+<body class="of-body">
   <!-- Fixed navbar -->
   <div class="navbar  pr_navbar " role="navigation">
     <div class="container">
