--- a/oncoFinder2/templates/base_website.html
+++ b/oncoFinder2/templates/base_website.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en-US">
+<html lang="en-US" class="of-html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
     <title>{% block title %}OF v2.0{% endblock %}</title>
-    
+
     <link rel="stylesheet" href="/static/css/bootstrap.css" type='text/css' />
-    <link rel="stylesheet" href="/static/css/style.css" type='text/css' />    
+    <link rel="stylesheet" href="/static/css/style.css" type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,7 +19,7 @@
     <script src="/static/js/jquery-2.1.0.min.js"></script>
 </head>
 
-<body>
+<body class="of-body">
   <!-- Fixed navbar -->
   <div class="navbar  ws_navbar " role="navigation">
     <div class="container">
