--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -1,31 +1,31 @@
 <!doctype html>
 <html lang="en-US" class="of-html">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-    <title>{% block title %}OF v2.0{% endblock %}</title>
-    
-    <link rel="stylesheet" href="/static/css/bootstrap.css" type='text/css' />
-    <link rel="stylesheet" href="/static/css/style.css" type='text/css' />    
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/static/css/jquery.dataTables.css" type='text/css' />
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="/static/js/jquery-2.1.0.min.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
-    <script src="/static/js/jquery.dataTables.js"></script>
-    <script src="/static/js/oncofinder2.js"></script>
-    <script src="/static/js/d3.v2.min.js"></script>
-    <script src="/static/js/jsNetworkx.js"></script>
-    <script src="http://code.highcharts.com/highcharts.js"></script>
-    <script src="http://code.highcharts.com/modules/exporting.js"></script>
-    <script src="/static/components/bootstrapx-clickover-bs3/js/bootstrapx-clickover.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>{% block title %}OF v2.0{% endblock %}</title>
+
+  <link rel="stylesheet" href="/static/css/bootstrap.css" type='text/css' />
+  <link rel="stylesheet" href="/static/css/style.css" type='text/css' />
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/static/css/jquery.dataTables.css" type='text/css' />
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  <script src="/static/js/jquery-2.1.0.min.js"></script>
+  <script src="/static/js/bootstrap.js"></script>
+  <script src="/static/js/jquery.dataTables.js"></script>
+  <script src="/static/js/oncofinder2.js"></script>
+  <script src="/static/js/d3.v2.min.js"></script>
+  <script src="/static/js/jsNetworkx.js"></script>
+  <script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="http://code.highcharts.com/modules/exporting.js"></script>
+  <script src="/static/components/bootstrapx-clickover-bs3/js/bootstrapx-clickover.js"></script>
 </head>
 
 <body class="of-body">
@@ -34,54 +34,58 @@
     <div class="container">
       <div class="navbar-header" id="ws_nav">
         <a class="" href="/">
-        <img src='/static/images/oncofinderLogo.png' alt='OncoFinder v2.0' title='OncoFinder v2.0'/>
+          <img src='/static/images/oncofinderLogo.png' alt='OncoFinder v2.0' title='OncoFinder v2.0'/>
         </a>
       </div>
       
-      <div class="navbar-right pr_header_menu" >
-      <a href="/user/{{ user.username }}/" id="current_user_link">
-              <span class="glyphicon glyphicon-user"></span> {{ user.username }}
-      </a>
-      <span class="glyphicon glyphicon-plus" data-toggle="tooltip"  data-placement="bottom" 
-                                             title="Create new project"  onClick="location.href='/project/new/'"></span>
-      <span class="glyphicon glyphicon-cog" data-toggle="tooltip"  data-placement="bottom" 
-                      title="Profile Settings" onClick="location.href='/settings/profile'"></span>
-      <span class="glyphicon glyphicon-off" data-toggle="tooltip"  data-placement="bottom" 
-                                             title="Logout" onClick="location.href='/logout'"></span>
-      
-     </div>   
+      <div class="navbar-right pr_header_menu">
+        <a href="/user/{{ user.username }}/" id="current_user_link">
+          <span class="glyphicon glyphicon-user"></span> {{ user.username }}
+        </a>
+        <span class="glyphicon glyphicon-plus" data-toggle="tooltip" data-placement="bottom"
+              title="Create new project" onClick="location.href='/project/new/'"></span>
+        <span class="glyphicon glyphicon-cog" data-toggle="tooltip" data-placement="bottom"
+              title="Profile Settings" onClick="location.href='/settings/profile'"></span>
+        <span class="glyphicon glyphicon-off" data-toggle="tooltip" data-placement="bottom"
+              title="Logout" onClick="location.href='/logout'"></span>
+      </div>
+
       <ul class="nav navbar-nav navbar-left pr_upp_menu">
-            <!-- <li><a href="#">Blog</a></li>  -->           
-            <li><a href="/db/pathways/human/primary_old/"><img src='/static/images/laboratory_info.png' style="width: 40px; margin-right: 3px;"/>
-                Biochem database
-                </a>
-            </li>
-            <li><a href="/db/drugs/"><img src='/static/images/pharmacy.png' style="width: 40px; margin-right: 3px;"/>
-                Drugs database
-                </a>
-            </li>
-            <li><a href="/db/medic/"><img src='/static/images/diagnostic.png' style="width: 40px; margin-right: 3px;"/>
-                Medical DB
-                </a>
-            </li>
-            <li><a href="/shambhala/"><img src='/static/images/tablet.png' style="width: 40px; margin-right: 3px;"/>
-                Shambhala 
-                </a>
-            </li>
-     </ul>
-     
+        <li>
+          <a href="/db/pathways/human/primary_old/"><img src='/static/images/laboratory_info.png' style="width: 40px; margin-right: 3px;"/>
+            Biochem database
+          </a>
+        </li>
+        <li>
+          <a href="/db/drugs/"><img src='/static/images/pharmacy.png' style="width: 40px; margin-right: 3px;"/>
+            Drugs database
+          </a>
+        </li>
+        <li>
+          <a href="/db/medic/"><img src='/static/images/diagnostic.png' style="width: 40px; margin-right: 3px;"/>
+            Medical DB
+          </a>
+        </li>
+        <li>
+          <a href="/shambhala/"><img src='/static/images/tablet.png' style="width: 40px; margin-right: 3px;"/>
+            Shambhala
+          </a>
+        </li>
+      </ul>
+
     </div>
+
   </div>
 
-    {% include "environment.html" %}
+  {% include "environment.html" %}
 
-    <!-- Content -->
-    <div{% if APP_ENVIRONMENT == 'PROD' %}{% else %}
-        style="{% if APP_ENVIRONMENT == 'UAT' %}border-left: 6px dashed lightgreen;{% else %}border-left: 6px dashed lightblue;{% endif %}"{% endif %}>
-        {% block content %}{% endblock %}
-    </div>
+  <!-- Content -->
+  <div{% if APP_ENVIRONMENT == 'PROD' %}{% else %}
+    style="{% if APP_ENVIRONMENT == 'UAT' %}border-left: 6px dashed lightgreen;{% else %}border-left: 6px dashed lightblue;{% endif %}"{% endif %}>
+    {% block content %}{% endblock %}
+  </div>
 
-    {% include "footer.html" %}
+  {% include "footer.html" %}
 
  </body>
  </html>
