Removed 1 sample t-test from view; changed default values of calculation form

--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -100,9 +100,9 @@
                 <span id="storey-fdr-help" class="label of-label-help">?</span>&nbsp;&nbsp;
                 {{ form.use_new_fdr }}
 
-                {{ form.use_ttest_1sam.label_tag }}
-                <span id="t-test-1-sample-help" class="label of-label-help">?</span>&nbsp;&nbsp;
-                {{ form.use_ttest_1sam }}
+{#                {{ form.use_ttest_1sam.label_tag }}#}
+{#                <span id="t-test-1-sample-help" class="label of-label-help">?</span>&nbsp;&nbsp;#}
+{#                {{ form.use_ttest_1sam }}#}
 
                 {{ form.pvalue_threshold.label_tag }}
                 {{ form.pvalue_threshold }}
