update Henkel report 6

--- a/oncoFinder2/templates/report/report_detail_henkel.html
+++ b/oncoFinder2/templates/report/report_detail_henkel.html
@@ -278,6 +278,7 @@
         <thead>
           <tr>
            <th id='pathname_th'>Pathway</th>
+           <th>Poolw</th>
            {%for group in report.get_all_gene_groups_as_list%}
             <!--  {% if forloop.counter > 1 %}<th>{{group}}</th> {%endif%}-->
             <th>{{group}}</th>
